[gd_scene load_steps=4 format=3 uid="uid://3xk4fdftjod6"]

[ext_resource type="Script" path="res://scenes/objects/player_entered_switch_platform/player_entered_switch_platform.gd" id="1_0oitw"]
[ext_resource type="PackedScene" uid="uid://lsjb0tkxg8k0" path="res://scenes/objects/switch_platform/switch_platform.tscn" id="2_th8hy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aems0"]
size = Vector2(91, 18)

[node name="PlayerEnteredSwitchPlatform" type="Node2D"]
script = ExtResource("1_0oitw")

[node name="SwitchPlatform" parent="." instance=ExtResource("2_th8hy")]

[node name="Area2D" type="Area2D" parent="SwitchPlatform"]
position = Vector2(11, 53)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchPlatform/Area2D"]
position = Vector2(40, -44)
shape = SubResource("RectangleShape2D_aems0")

[connection signal="body_entered" from="SwitchPlatform/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SwitchPlatform/Area2D" to="." method="_on_area_2d_body_exited"]
